--- a/package.json
+++ b/package.json
@@ -5,16 +5,33 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "seed": "node seeds/seed.js"
+  },
+  "keywords": [],
+  "dependencies": {
+    "bcrypt": "^5.0.0",
+    "connect-session-sequelize": "^7.0.4",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-handlebars": "^5.2.0",
+    "express-session": "^1.17.1",
+    "mysql2": "^2.2.5",
+    "nodemon": "^2.0.20",
+    "sequelize": "^6.3.5"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/eljayman/14-mvc-blog-app.git"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "eljayman",
+  "license": "MIT License",
   "bugs": {
     "url": "https://github.com/eljayman/14-mvc-blog-app/issues"
   },
-  "homepage": "https://github.com/eljayman/14-mvc-blog-app#readme"
+  "devDependencies": {
+    "eslint": "^7.12.1",
+    "eslint-config-prettier": "^6.15.0",
+    "prettier": "^2.1.2"
+  }
 }
